<resources>
    <string name="app_name">Document Uploader</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- General use -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="documents">Documents</string>
    <string name="documents_cache">documents_cache</string>


    <!-- Register page -->
    <string name="signup_register">Register</string>
    <string name="signup_error_message">Please make sure all fields are completed.</string>
    <string name="signup_error_title">Oops!</string>
    <string name="signup_customerID">Customer ID</string>


    <!-- Login page -->
    <string name="login_loginButton">Log in</string>
    <string name="login_error_message">Please make sure you enter a Username and Password</string>
    <string name="login_error_title">Oops!</string>

    <!-- Action bar menu -->
    <string name="action_logout">Logout</string>
    <string name="action_camera">menucamera</string>
    <string name="action_upload">Upload Document</string>

    <!-- Array for camera chocies -->
    <array name="camera_choices">
        <item>Take Picture</item>
        <item>Choose from Gallery</item>
    </array>

    <!-- Error Messages -->
    <string name="storage_error">There was a problem accessing device\'s storage</string>
    <string name="error">Sorry! There was an Error!</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="file_size_toolarge">The selected file is too large! Select a new file</string>
    <string name="sorry_title">We\'re Sorry!</string>
    <string name="upload_success_message">Document Uploaded, It will be Reviewed by a professional within 24 hours, Thank You!</string>
    <string name="uploading_message">" Uploading Document... "</string>
    <string name="main_emptymessage">You haven\'t uploaded any documents yet</string>

    <!-- Documents -->
    <string name="doc_status_title">"Status: "</string>
    <string name="doc_status_waitingreview">"Waiting for Review"</string>
    <string name="doc_status_underreview">"Under Review"</string>
    <string name="doc_status_reviewed">"Reviewed"</string>
    <string name="doc_status_reviewedapproved">"Approved"</string>
    <string name="doc_status_revieweddenied">"Denied"</string>




</resources>
