<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.seerauberstudios.docuploader.SignupActivity">

    <ProgressBar
        android:id="@+id/signup_progressbar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/signup_customerid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_customerID"
        android:padding="10dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_below="@+id/signup_customerid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:padding="10dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_below="@+id/signup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="10dp"
        android:inputType="textPassword" />

    <Button
        android:layout_below="@+id/signup_password"
        android:id="@+id/signup_regbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_register"/>

</RelativeLayout>
