<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center">

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_below="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="10dp"/>
    <Button
        android:id="@+id/login_loginButton"
        android:layout_below="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_loginButton"/>

    <com.digits.sdk.android.DigitsAuthButton
        android:id="@+id/login_digits_button"
        android:layout_below="@+id/login_loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/login_register"
        android:layout_below="@+id/login_digits_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Don't have an account? Signup Here"
        android:padding="20dp"/>

</RelativeLayout>
